--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     }
     img {
         max-width: 100%;
+        vertical-align: top;
     }
     </style>
 </head>
 <body>
     <img src="header.jpg" alt="">
+    <img src="hero.webp" alt="">
 </body>
 </html>
