--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 <body>
     <img src="header.jpg" alt="">
     <img src="hero.webp" alt="">
+    <img src="acustica.jpg" alt="">
 </body>
 </html>
