--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
     <img src="header.jpg" alt="">
     <img src="hero.webp" alt="">
     <img src="acustica.jpg" alt="">
+    <img src="clasica.webp" alt="">
+    <img src="footer.jpg" alt="">
 </body>
 </html>
