--- a/index.html
+++ b/index.html
@@ -9,14 +9,24 @@
     img {
         max-width: 100%;
         vertical-align: top;
+         /* display: none;  */
     }
+    img#responsive{
+        display: none;
+    }
+    @media screen and (max-width: 768px ) {
+        img#responsive{
+            display: block;
+        }
+    }
+    
     </style>
 </head>
+
 <body>
+    <img src="invie-responsive.webp" alt="" id="responsive">
     <img src="header.jpg" alt="">
     <img src="hero.webp" alt="">
     <img src="acustica.jpg" alt="">
-    <img src="clasica.webp" alt="">
-    <img src="footer.jpg" alt="">
 </body>
 </html>
