--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <style media="screen">
     body{
         margin: 0;
+        border: 10px solid #122836;
     }
     img {
         max-width: 100%;
@@ -28,5 +29,8 @@
     <img src="header.jpg" alt="">
     <img src="hero.webp" alt="">
     <img src="acustica.jpg" alt="">
+    <img src="clasica.webp" alt="">
+    <img src="footer.jpg" alt="">
+    <p>la psd</p>
 </body>
 </html>
